--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ header a {
     margin-right: 25px;
 }
 
-button {
+button, .form__submit{
     font-family: "Raleway", sans-serif;
     font-size: 15px;
     color: #fff;
@@ -48,10 +48,10 @@ button {
 
 .about {
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    padding-top: 115px; 
+    justify-content: space-around;
     padding-bottom: 115px;
+    padding-top: 115px; 
 }
 
 .about h1 {
@@ -67,12 +67,12 @@ button {
 
 .about button {
     font-size: 18px;
-    border-radius: 20px;
     padding: 20px 25px;
-    margin: 20px;
+    border-radius: 20px;
+    margin-top: 20px;
 }
 
-.about-info {   
+.about__info {   
     max-width: 550px;
 }
 
@@ -81,4 +81,124 @@ button {
     background: url('img/back.png') no-repeat;
     background-position: center;
     background-size: cover;
+}
+
+.form__container {
+    width: 550px;
+}
+
+.form {
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+}
+
+.form h1 {
+    font-size: 48px;
+}
+
+.form p {
+    font-size: 18px;
+    opacity: 0.65;
+}
+
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1D263A;
+    color: #fff;
+}
+
+.form__group,
+.form__budget {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+}
+
+.form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.form input, 
+.form select {
+     font-size: 18px;
+     color: #213053;
+     height: 60px;
+     padding-top: 0;
+     padding-bottom: 0;
+     padding-left: 20px;
+     padding-right: 20px;
+     border-radius: 15px;
+     border: none;
+}
+
+.form__submit {
+    font-size: 18px;
+    color: #213053;
+    margin-top: 100px;
+}
+
+select {
+    appearance: none;
+}
+
+input {
+    outline: none;
+}
+
+button:hover {
+    background-color: #fff;
+    color: black;
+}
+ button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px  rgba(246 152 12 / 20%);
+    transition: background-color, 0.3s ease-in;
+}
+
+footer {
+    padding: 90px 20px;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__copyright {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
+}
+
+.footer__group {
+    margin-right: 80px;
+}
+
+.footer__group h3 {
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;
+}
+.footer__links {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__links a {
+    margin-bottom: 15px;
 }
